# contmagnat

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: deps.py  main.py
app/api/routes/: generation.py  posts.py
app/bot/: command_parsing.py  dispatcher.py  keyboards.py  main.py  message_content.py  middlewares.py  states.py
app/bot/handlers/: admin.py  generate.py  start.py  upload.py
app/clients/: anthropic.py  openrouter.py
app/core/: config.py  constants.py  errors.py
app/db/: file_storage.py  memory.py  models.py
app/db/migrations/: README  env.py
app/db/migrations/versions/: 0001_initial.py
app/db/repositories/: generation_logs.py  posts.py
app/schemas/: generation.py  posts.py
app/services/: __init__.py  access_control.py  embeddings.py  generation.py  post_ingestion.py  prompt_builder.py  rag.py  retrieval.py  storage.py  text_generation.py  topic_registry.py  training.py
data/training/topics/: index.json
scripts/: import_posts.py  reindex_embeddings.py
tests/unit/: test_access_control.py  test_anthropic_client.py  test_bot_admin_flow.py  test_bot_handlers.py  test_bot_keyboards.py  test_bot_user_flow.py  test_command_parsing.py  test_constants.py  test_file_storage.py  test_generation.py  test_generation_mock.py  test_in_memory_repositories.py  test_message_content.py  test_post_ingestion.py  test_prompt_builder.py  test_rag_index.py  test_text_generation_factory.py  test_topic_registry.py
