[project]
name = "contmagnat"
version = "0.1.0"
description = "Telegram RAG post generator MVP"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiogram>=3.4,<4.0",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<1.0",
    "fastapi>=0.110,<1.0",
    "httpx>=0.27,<1.0",
    "pgvector>=0.2.5,<1.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "uvicorn[standard]>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
